--- a/.eslintrc
+++ b/.eslintrc
@@ -34,6 +34,14 @@
     "react/jsx-indent-props": [
       2,
       4
+    ],
+    "no-multi-spaces": [
+      "error",
+      {
+        "exceptions": {
+          "VariableDeclarator": true
+        }
+      }
     ]
   }
 }
